# mlek

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  Readme.md  build_default.py  release_notes.txt  set_up_default_resources.py
aMyWork/: amycommand.sh
b_yv5s/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tflite_micro.cmake
b_yv5s/audio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
b_yv5s/camera/: CTestTestfile.cmake  Makefile  cmake_install.cmake
b_yv5s/cmsis-dsp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
b_yv5s/cmsis_device/: CTestTestfile.cmake  Makefile  (+1 more)
bin_2m/: ethos-u-ad.axf  ethos-u-ad.map  ethos-u-asr.map  ethos-u-img_class.map  ethos-u-inference_runner.axf  ethos-u-inference_runner.map  ethos-u-kws.axf  ethos-u-kws.map  ethos-u-kws_asr.map  ethos-u-kws_preprocess.axf  ethos-u-kws_preprocess.map  ethos-u-memory_bandwidth_test.axf  ethos-u-memory_bandwidth_test.map  ethos-u-mobilevit_s.map  ethos-u-noise_reduction.axf  ethos-u-noise_reduction.map  ethos-u-object_detection.axf  ethos-u-object_detection.map  ethos-u-vww.axf  ethos-u-vww.map  ethos-u-yolov5s.map
bin_393216/: ethos-u-ad.axf  ethos-u-ad.map  ethos-u-asr.map  ethos-u-img_class.map  ethos-u-inference_runner.axf  ethos-u-inference_runner.map  ethos-u-kws.axf  ethos-u-kws.map  ethos-u-kws_asr.map  ethos-u-kws_preprocess.axf  ethos-u-kws_preprocess.map  ethos-u-memory_bandwidth_test.axf  ethos-u-memory_bandwidth_test.map  ethos-u-mobilevit_s.map  ethos-u-noise_reduction.axf  ethos-u-noise_reduction.map  ethos-u-object_detection.axf  ethos-u-object_detection.map  ethos-u-vww.axf  ethos-u-vww.map  ethos-u-yolov5s.map
docs/: documentation.md  quick_start.md
model_conditioning_examples/: Readme.md
source/application/api/use_case/memory_bandwidth_test/: CMakeLists.txt
source/application/api/use_case/memory_bandwidth_test/include/: Am_Test_Processing.hpp  Memory_Bandwidth_Model.hpp
source/application/api/use_case/memory_bandwidth_test/src/: AM_Test_Processing.cc  Memory_Bandwidth_Model.cc
(+220 files in other folders)
